--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,10 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  
   cupertino_icons: ^1.0.8
+  dartz: ^0.10.1
   firebase_core: ^3.8.0
+  firebase_storage: ^12.3.6
   flutter:
     sdk: flutter
   image_picker: ^1.1.2
@@ -39,7 +40,6 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
