--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cloud_firestore: ^5.5.0
   appwrite: ^13.0.0
+  cloud_firestore: ^5.5.0
   cupertino_icons: ^1.0.8
   dartz: ^0.10.1
   firebase_core: ^3.8.0
@@ -39,6 +39,7 @@ dependencies:
   flutter_bloc: ^8.1.4
   get_it: ^8.0.2
   image_picker: ^1.1.2
+  modal_progress_hud_nsn: ^0.5.1
   path: ^1.9.0
   supabase_flutter: ^2.8.1
 
